--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -9,12 +9,13 @@
     <th>Name</th>
     <th>Description</th>
   </tr>
-  <%= @todos.each do |todo| %>
+  <% @todos.each do |todo| %>
       <tr>
         <td> <%= todo.name %></td>
         <td><%= todo.description %></td>
         <td><%= link_to "Edit", edit_todo_path(todo) %></td>
         <td><%= link_to "Show", todo_path(todo) %></td>
+        <td><%= link_to "Delete", todo_path(todo), method: :delete, data: {confirm: "Are ypu sure?"} %></td>
       </tr>
   <% end %>
 </table>
